# HW4-Clustering

./: pyproject.toml  requirements.txt
.github/workflows/: test.yml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
